<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/login_icon"
        app:layout_constraintBottom_toTopOf="@+id/TextMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_icon" />

    <EditText
        android:id="@+id/TextMail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:iconTint="@color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/TextPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="NotSibling" />

    <EditText
        android:id="@+id/TextPasswordLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/contraseña1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottonIniarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextMail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bottonIniarSesion"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:text="@string/iniciar_sesion"
        android:textColor="#020202"
        android:textSize="12sp"
        app:iconTint="@color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/button_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPasswordLogin"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_registro"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="115dp"
        android:text="@string/registro"
        android:textColor="#0C0C0C"
        android:textSize="12sp"
        app:iconTint="@color/holo_green_light"
        app:layout_constraintBottom_toTopOf="@+id/olvidastecontra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottonIniarSesion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/olvidastecontra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:foregroundGravity="center"
        android:minHeight="48dp"
        android:text="@string/olvidaste_tu_contraseña"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>