<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="241dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/login_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-37dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRecuperar"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_registro"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRecuperar"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="180dp"
        android:text="@string/recuperar"
        android:textColor="#020202"
        android:textSize="16sp"
        app:iconTint="@color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRecuperar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:text="@string/bienvenido"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="5dp"
        android:foregroundGravity="center"
        android:text="@string/introduce_tu_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailRecuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ImageView
        android:id="@+id/flechaAtras"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:contentDescription="@string/flecha_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/flecha_atras" />

</androidx.constraintlayout.widget.ConstraintLayout>
