<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_registrarse"
        android:layout_width="92dp"
        android:layout_height="94dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/logo_registro"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/TextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_registro" />

    <EditText
        android:id="@+id/TextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_account_circle"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/nombre_y_apellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_registrarse" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/email_registro"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPersonName" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/contraseña_registro1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/TextPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_house"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/domicilio"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPostalAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

    <EditText
        android:id="@+id/TextPostalAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_city"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/ciudad"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPostalAddress3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPostalAddress" />

    <EditText
        android:id="@+id/TextPostalAddress3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_region"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/provincia"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextPostalAddress4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPostalAddress2" />

    <EditText
        android:id="@+id/TextPostalAddress4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:height="43dp"
        android:drawableStart="@drawable/ic_codigo_postal"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:foregroundTint="#9E9E9E"
        android:hint="@string/codio_postal"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPostalAddress3" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center_vertical"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPostalAddress4" />

</androidx.constraintlayout.widget.ConstraintLayout>